# CFA-Reserach-Publication-RAG-System-ADS

./: .gitignore  README.md  docker-compose.yaml
Airflow/: Dockerfile  docker-compose.yaml
Airflow/dags/: aws_ingestion_pipeline.py  data_ingestion.py  pypdf_pipeline.py
data-ingestion/: data_ingestion.py  snowflake_ingestion.py
fastapi/: main_fastapi.py  pyproject.toml  text_processor.py
fastapi/storage/extractions/A A DUMMY/: extracted_content.md  image_index.json  text_nodes.json
streamlit/: index.py  page1.py  page2.py  page3.py  page4.py  pyproject.toml
