[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Sarthak <sarthaksom10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
streamlit-option-menu = "^0.4.0"
openai = "^1.52.0"
pymssql = "^2.3.1"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
datasets = "^3.0.1"
plotly = "^5.24.1"
streamlit-plotly-events = "^0.0.6"
uvicorn = "^0.32.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
fastapi = "^0.115.2"
pymysql = "^1.1.1"
bcrypt = "^4.2.0"
jwt = "^1.3.1"
datetime = "^5.5"
python-multipart = "^0.0.12"
logging = "^0.4.9.6"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.18.2"
pyjwt = "^2.9.0"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
